* fix swagger doc
